--- a/02-Homework/Develop/style.css
+++ b/02-Homework/Develop/style.css
@@ -11,9 +11,11 @@ textarea {
   color: #000000;
   border-left: 1px solid black;
   padding: 10px;
+  padding-right: 50%;
+  
 }
 
-.jumbotron {
+header {
   text-align: center;
   background-color: transparent;
   color: black;
@@ -34,13 +36,16 @@ textarea {
   white-space: pre-wrap;
   height: 80px;
   border-top: 1px solid white;
+  
 }
 
 .hour {
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
-}
+
+ }
+
 
 .past {
   background-color: #d3d3d3;
@@ -57,15 +62,16 @@ textarea {
   color: white;
 }
 
-.saveBtn {
+.savebtn {
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
   background-color: #06aed5;
   color: white;
+  
 }
 
-.saveBtn i:hover {
+.savebtn i:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
 }
